# oauth2-proxy-admission-controller

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  index.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/: bump_chart_version.sh  renovate-config.js  renovate.json
.github/workflows/: build.yaml  merge.yaml  release.yaml  renovate.yml
chart/oauth2-proxy-admission-controller/: Chart.yaml  values.yaml
chart/oauth2-proxy-admission-controller/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  mutatingwebhook.yaml  pki.yaml  secret.yaml  service.yaml  serviceaccount.yaml
chart/oauth2-proxy-admission-controller/templates/tests/: test-connection.yaml
docs/: proxy-drawio.drawio
oauth2_proxy_admission_controller/: app.py  config.py  kubernetes_client.py  main.py  models.py  pod_operations.py  service_operations.py  settings.py
src/: app.py  config.py  conftest.py  k8s.py  kubernetes_client.py  log.py  models.py  pod.py  pod_operations.py  service_operations.py  test_config.py  testapp.py  utils.py
terraform_keycloak_client/: data.tf  main.tf  outputs.tf  providers.tf  variables.tf
tests/: test_config.py  test_utils.py
